fix: app foobar and encoder integrate

--- a/bucket/app-foobar2000-encoders.json
+++ b/bucket/app-foobar2000-encoders.json
@@ -15,7 +15,7 @@
     "installer": {
         "script": [
             "Remove-Item \"$dir\\`$PLUGINSDIR\" -Force -Recurse",
-            "$FoobarDir = $(appdir foobar2000 $global)",
+            "$FoobarDir = $(appdir app-foobar2000 $global)",
             "if (Test-Path \"$FoobarDir\") {",
             "    Get-ChildItem -Path \"$FoobarDir\\current\" -Filter \"encoders\" | Remove-Item -Force -Recurse",
             "    New-Item \"$FoobarDir\\current\\encoders\" -ItemType Junction -Target \"$dir\" | Out-Null",
@@ -24,7 +24,7 @@
     },
     "uninstaller": {
         "script": [
-            "$FoobarDir = $(appdir foobar2000 $global)",
+            "$FoobarDir = $(appdir app-foobar2000 $global)",
             "if (Test-Path \"$FoobarDir\") {",
             "    Get-ChildItem -Path \"$FoobarDir\\current\" -Filter \"encoders\" | Remove-Item -Force -Recurse",
             "}"
