--- a/bucket/app-foobar2000.json
+++ b/bucket/app-foobar2000.json
@@ -27,7 +27,7 @@
         "script": [
             "Remove-Item \"$dir\\`$*\", \"$dir\\uninstall.exe\" -Force -Recurse",
             "New-Item \"$dir\\portable_mode_enabled\" -Force | Out-Null",
-            "$EncodersDir = $(appdir foobar2000-encoders $global)",
+            "$EncodersDir = $(appdir app-foobar2000-encoders $global)",
             "if (Test-Path \"$EncodersDir\") {",
             "    New-Item \"$dir\\encoders\" -ItemType Junction -Target \"$EncodersDir\\current\" | Out-Null",
             "}"
